objects/ssot__LoyaltyProgramPartnerLedgerSummary__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActivityDate__c</fullName>
        <label>ActivityDate</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Loyalty Pgm Partner Ledger Summary Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyPartnerLedgerStatus__c</fullName>
        <label>Loyalty Partner Ledger Status</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyPartnerLedgerType__c</fullName>
        <label>Loyalty Partner Ledger Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyPgmPtnrPrepaidPackId__c</fullName>
        <label>Loyalty Program Partner Prepaid Pack</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyProgramPartnerId__c</fullName>
        <label>Loyalty Program Partner</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalPointsNumber__c</fullName>
        <label>TotalPointsNumber</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761223080_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyProgramPartnerLedgerSummary_L_rel</label>
        <referenceTo>ssot__LoyaltyProgramPartner__dlm</referenceTo>
        <relationshipLabel>LoyaltyProgramPartnerLedgerSummary_L_rel</relationshipLabel>
        <relationshipName>rel_1697761223080_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761224094_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyProgramPartnerLedgerSummary_L_rel</label>
        <referenceTo>ssot__LoyaltyProgramPartnerPrepaidPack__dlm</referenceTo>
        <relationshipLabel>LoyaltyProgramPartnerLedgerSummary_L_rel</relationshipLabel>
        <relationshipName>rel_1697761224094_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>